--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>Spotify Web Playback SDK Quick Start</h1>
+    <button id="togglePlay">Toggle Play</button>
     <script src="https://sdk.scdn.co/spotify-player.js"></script>
         <script>
         window.onSpotifyWebPlaybackSDKReady = () => {
