--- a/index.html
+++ b/index.html
@@ -1,48 +1,15 @@
 <html>
   <head>
-    <title>Spotify Web Playback SDK Quick Start</title>
+    <title>Authenticating Spotify</title>
   </head>
   <body>
-    <h1>Spotify Web Playback SDK Quick Start</h1>
-    <button id="togglePlay">Toggle Play</button>
-    <script src="https://sdk.scdn.co/spotify-player.js"></script>
-    <script>
-     window.onSpotifyWebPlaybackSDKReady = () => {
-            const token = 'BQDFBIfa3T2QprbDod_7z7u8JyXf4R7TkzP2EN23EBEg2ibDg83OlWoq6dlbPL7bImsHKCNQjSwpZz4PM3l1D5JFZDc3-WcGmgiOsPqM2DTbXNoXu5X4Mg-XqowZRRQOwbhiH9yCTjK7Uzho3CvssAxYUUpHtHxUFfaXBaHNBdennKjfV_0ehrcIJ9E_3nBNqx69ljOtbk3W7nVuwstscWbHHUOu';
-            const player = new Spotify.Player({
-                name: 'Web Playback SDK Quick Start Player',
-                getOAuthToken: cb => { cb(token); },
-                volume: 0.5
-            });
-
-            // Ready
-            player.addListener('ready', ({ device_id }) => {
-                console.log('Ready with Device ID', device_id);
-            });
-
-            // Not Ready
-            player.addListener('not_ready', ({ device_id }) => {
-                console.log('Device ID has gone offline', device_id);
-            });
-
-            player.addListener('initialization_error', ({ message }) => {
-                console.error(message);
-            });
-
-            player.addListener('authentication_error', ({ message }) => {
-                console.error(message);
-            });
-
-            player.addListener('account_error', ({ message }) => {
-                console.error(message);
-            });
-
-            document.getElementById('togglePlay').onclick = function() {
-              player.togglePlay();
-            };
-
-            player.connect();
-        }
-    </script>
+	<p>Please wait while we authenticate Spotify...</p>
+	<script type="text/javascript">
+		if(window.opener) {
+			window.opener.postMessage('?' + window.location.href.split('?')[1], "*");
+		} else {
+			window.close();
+		}
+	</script>
   </body>
 </html>
